--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,34 +1,18 @@
 <div class="ww">
     <h1>Login</h1>
-    <form #myForm="ngForm">
+    <form>
         <div class="form-group">
             <label for="name">Name</label>
-            <input [(ngModel)]="username" name="name"
-                   type="text" class="form-control"
-                   id="name"  required
-                   #name="ngModel">
-
-            <div [hidden]="name.valid || name.pristine"
-                 class="alert alert-danger">
-                Name is required
-            </div>
+            <input  name="name" type="text" class="form-control" id="name"  required>
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input  [(ngModel)]="password" name="password"
-                    type="text" class="form-control"
-                    id="password" required
-                    #pass="ngModel"
-            pattern="^(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{4,}$">
+            <input  name="password" type="text" class="form-control" id="password" required>
 
-            <div [hidden]="pass.valid || pass.pristine"
-                 class="alert alert-danger">
-                Password should have at least 1 digit and 1 capital letter
-            </div>
         </div>
 
-        <button type="submit" [disabled]="!myForm.valid" class="btn btn-success" (click)="login()">Submit</button>
+        <button type="submit" class="btn btn-success">Submit</button>
 
     </form>
 </div>
