--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,11 +2,11 @@
   <a class="navbar-brand">Elbit</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-      <a class="nav-item nav-link" routerLink="/todos" routerLinkActive="active">Todos</a>
-      <a class="nav-item nav-link" routerLink="/about" routerLinkActive="active">About</a>
-      <a class="nav-item nav-link" *ngIf="!logedIn" routerLink="/login" routerLinkActive="active">Login</a>
-      <a class="nav-item nav-link" *ngIf="logedIn" (click)="logout()">Logout</a>
+      <a class="nav-item nav-link" >Dashboard</a>
+      <a class="nav-item nav-link" >Todos</a>
+      <a class="nav-item nav-link" >About</a>
+      <a class="nav-item nav-link" >Login</a>
+      <a class="nav-item nav-link" >Logout</a>
     </div>
   </div>
 </nav>
